Bug 90879 - [patch] Fix a crash when two authentication requests are in flight.
Summary: [patch] Fix a crash when two authentication requests are in flight.
Status: RESOLVED FIXED
Alias: None
Product: PolicyKit
Classification: Unclassified
Component: libpolkit (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: David Zeuthen (not reading bugmail)
QA Contact: David Zeuthen (not reading bugmail)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-05 23:20 UTC by Miloslav Trmac
Modified: 2015-06-08 15:50 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
0001-Fix-a-crash-when-two-authentication-requests-are-in-.patch (1.64 KB, patch)
2015-06-05 23:21 UTC, Miloslav Trmac
Details | Splinter Review

Description Miloslav Trmac 2015-06-05 23:20:48 UTC
To reproduce:
1. pkttyagent -p $$ # or another suitable PID
# Keep it running, then in another terminal:
2. pkcheck -p $that_pid -a org.freedesktop.policykit.exec -u
# Keep it running, then in another terminal:
3. pkcheck -p $that_pid -a org.freedesktop.policykit.exec -u
4. Then, in the pkttyagent prompt, press Enter.
    
polkit_agent_text_listener_initiate_authentication was already setting
an appropriate error code, so the g_assert was unnecessary
Comment 1 Miloslav Trmac 2015-06-05 23:21:50 UTC
Created attachment 116328 [details] [review]
0001-Fix-a-crash-when-two-authentication-requests-are-in-.patch
Comment 2 Colin Walters 2015-06-06 13:47:05 UTC
Comment on attachment 116328 [details] [review]
0001-Fix-a-crash-when-two-authentication-requests-are-in-.patch

Review of attachment 116328 [details] [review]:
-----------------------------------------------------------------

LGTM
Comment 3 Miloslav Trmac 2015-06-08 15:50:31 UTC
Thanks, pushed as e2d2fafd106624ddfea4b17d3f40704b2031c00b .


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.