Fix a crash when two authentication requests are in flight.

To reproduce:
1. pkttyagent -p $$ # or another suitable PID
# Keep it running, then in another terminal:
2. pkcheck -p $that_pid -a org.freedesktop.policykit.exec -u
# Keep it running, then in another terminal:
3. pkcheck -p $that_pid -a org.freedesktop.policykit.exec -u
4. Then, in the pkttyagent prompt, press Enter.

polkit_agent_text_listener_initiate_authentication was already setting
an appropriate error code, so the g_assert was unnecessary.

https://bugs.freedesktop.org/show_bug.cgi?id=90879